[tool.poetry]
name = "repl_python3_TournamentBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
config = "^0.5.1"
wordlist = "^1.0.1"
brawlstats = "^4.1.1"
ping3 = "^4.0.0"
utils = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
